<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of FaSoLa Minutes for Android.
  ~ Copyright (c) 2016 Mike Richards. All rights reserved.
  -->

<resources>

    <string name="app_name">FaSoLa Minutes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_leader_sort_name">By last name</string>
    <string name="menu_leader_sort_count">By lead count</string>
    <string name="menu_leader_sort_entropy">By entropy</string>

    <string name="tab_leaders">Leaders</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_singings">Singings</string>
    <string name="tab_search">Search</string>

    <string name="title_activity_leader">Leader</string>
    <string name="title_activity_song">Song</string>
    <string name="title_activity_singing">Singing</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <string name="song_label">Songs</string>
    <string name="singing_label">Singings</string>
    <string name="search_leaders">Search Leaders</string>
    <string name="search_songs">Search songs</string>
    <string name="search_singings">Search Singings</string>
    <string name="menu_leader_sort_first_name">By first name</string>
    <string name="menu_song_sort_page">By page number</string>
    <string name="menu_song_sort_title">By title</string>
    <string name="menu_song_sort_leads">By lead count</string>
    <string name="select_leader">Pick a leader to view</string>
    <string name="select_song_or_leader">Pick one to view</string>
    <string name="play_recording_text">Play Recording</string>

    <plurals name="leadCount">
        <item quantity="one">%d Lead</item>
        <item quantity="other">%d Leads</item>
    </plurals>
    <plurals name="timesLed">
        <item quantity="one">Led %d time</item>
        <item quantity="other">Led %d times</item>
    </plurals>
    <plurals name="coleads">
        <item quantity="one">%d Co-lead</item>
        <item quantity="other">%d Co-leads</item>
    </plurals>
    <plurals name="songsLed">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="leaders">
        <item quantity="one">%d Leader</item>
        <item quantity="other">%d Leaders</item>
    </plurals>
    <plurals name="singingsAttended">
        <item quantity="one">%d Singing</item>
        <item quantity="other">%d Singings</item>
    </plurals>
    <plurals name="playing_songs">
        <item quantity="one">Playing %d song</item>
        <item quantity="other">Playing %d songs</item>
    </plurals>
    <plurals name="enqueuing_songs">
        <item quantity="one">%d song enqueued</item>
        <item quantity="other">%d songs enqueued</item>
    </plurals>
    <plurals name="play_songs">
        <item quantity="one">Play one recording</item>
        <item quantity="other">Play %d recordings</item>
    </plurals>
    <plurals name="enqueue_songs">
        <item quantity="one">Enqueue one recording</item>
        <item quantity="other">Enqueue %d recordings</item>
    </plurals>
    <string name="title_activity_playlist">Playlist</string>
    <string name="tune_label">Tune:</string>
    <string name="words_label">Words:</string>
    <string name="tab_playlist">Playlist</string>
    <string name="empty_playlist"><b>Playlist is empty.</b>\n\nAdd recordings by browsing Leaders, Songs, or Singings.\n\n</string>
    <string name="empty_playlist_link"><u>Learn more about recordings</u></string>
    <string name="empty_singing">
        This singing is either not from <i>The Sacred Harp, 1991 Edition</i> or it uses multiple books.\n\n
        Minutes text is available in the "full text" tab.
    </string>
    <string name="menu_singing_sort_year">By year</string>
    <string name="menu_singing_sort_recordings">By recording count</string>
    <string name="key_label">Key:</string>
    <string name="time_label">Time:</string>
    <string name="menu_song_sort_key">By key signature</string>
    <string name="menu_song_sort_time">By time signature</string>
    <string name="menu_song_sort_meter">By meter</string>
    <string name="meter_label">Meter:</string>
    <string name="menu_singing_song_sort_order">By lead order</string>
    <string name="menu_singing_song_sort_page">By page number</string>
    <string name="menu_singing_song_sort_leader">By leader name</string>
    <string name="menu_clear_playlist">Clear</string>
    <string name="menu_now_playing">Now playing</string>
    <string name="title_playlist">Playlist</string>
    <string name="streaming_prompt">Streaming recordings without a wifi connection may use large amounts of data.</string>
    <string name="search_leads">Search Songs and Singings</string>
    <string name="leader_chart_title">Singings per year</string>
    <string name="song_chart_title">Leads per year</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_leader_corrections">Submit a correction</string>
    <string name="menu_filter">Filter</string>
    <string name="title_activity_song_filter">Song Filter</string>
    <string name="menu_clear">Clear</string>
    <string name="graph_settings">Graph settings</string>
    <string name="menu_graph_leads_per_year">Leads per year</string>
    <string name="menu_graph_song_rank">Rank by year</string>
    <string name="menu_graph_percent_leads">Leads per year (percent)</string>
    <string name="channel_name">Recordings</string>
</resources>
