<!--
  ~ This file is part of FaSoLa Minutes for Android.
  ~ Copyright (c) 2016 Mike Richards. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.fasola.fasolaminutes.MainActivity">

    <group android:id="@+id/group_search_items">
        <item android:id="@+id/menu_search"
              android:title="@string/search_leaders"
              android:icon="@drawable/ic_action_search"
              android:showAsAction="ifRoom|collapseActionView"
              android:actionViewClass="android.widget.SearchView" />

        <item android:id="@+id/menu_sort"
            android:title="@string/menu_sort"
            android:icon="@drawable/ic_action_sort_by_size"
            android:showAsAction="always">

            <menu>
            <group android:id="@+id/menu_group_sort"
                android:checkableBehavior="single">

                <item android:id="@+id/menu_leader_sort_name"
                    android:title="@string/menu_leader_sort_name"
                    app:showAsAction="never" />

                <item android:id="@+id/menu_leader_sort_first_name"
                    android:title="@string/menu_leader_sort_first_name"
                    app:showAsAction="never" />

                <item android:id="@+id/menu_leader_sort_count"
                    android:title="@string/menu_leader_sort_count"
                    app:showAsAction="never" />

                <item android:id="@+id/menu_leader_sort_entropy"
                    android:title="@string/menu_leader_sort_entropy"
                    app:showAsAction="never" />

            </group>
            </menu>

        </item>
    </group>
</menu>
