<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of FaSoLa Minutes for Android.
  ~ Copyright (c) 2016 Mike Richards. All rights reserved.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tab_leaders"
        android:drawableTop="@drawable/ic_fa"
        android:id="@+id/tab_leaders"
        android:clickable="true"
        android:padding="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tab_songs"
        android:drawableTop="@drawable/ic_sol"
        android:id="@+id/tab_songs"
        android:clickable="true"
        android:padding="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tab_singings"
        android:drawableTop="@drawable/ic_la"
        android:id="@+id/tab_singings"
        android:clickable="true"
        android:padding="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tab_playlist"
        android:drawableTop="@drawable/ic_mi"
        android:id="@+id/tab_playlist"
        android:clickable="true"
        android:padding="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" />

</merge>