<!--
  ~ This file is part of FaSoLa Minutes for Android.
  ~ Copyright (c) 2016 Mike Richards. All rights reserved.
  -->

<org.fasola.fasolaminutes.WrapperLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:wrapper_layout="@layout/activity_wrapper"
    tools:context=".TabActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:title="@string/tab_leaders"
            android:name="org.fasola.fasolaminutes.MainActivity$LeaderListFragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

        <fragment
            android:title="@string/tab_songs"
            android:name="org.fasola.fasolaminutes.MainActivity$SongListFragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

        <fragment
            android:title="@string/tab_singings"
            android:name="org.fasola.fasolaminutes.MainActivity$SingingListFragment"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>

    </android.support.v4.view.ViewPager>
</org.fasola.fasolaminutes.WrapperLayout>